--- a/talks/2013-03-02-wpgalaxy.md
+++ b/talks/2013-03-02-wpgalaxy.md
@@ -14,6 +14,9 @@ If you saw this talk, **<a href="https://joind.in/8209" target="_newtab">I'd rea
 * [Awesome He-Man costume](http://www.halloweencostumes.com/he-man-costume.html)
 * [Pro Git, by Scott Chacon (entire book online for free)](http://git-scm.com/book)
 * [Try GitHub](http://try.github.com)
+* [Mark Jaquith's WP Skeleton](https://github.com/markjaquith/WordPress-Skeleton)
+* [scribu plugin dependency plugin](https://github.com/scribu/wp-plugin-dependencies)
+
 * [WP Custom Objects, a WordPress plugin for creating custom post types](https://github.com/jasonrhodes/WP-CustomObjects) -- built using OOP and `add_action("init", array($this, "method"))` style callbacks
 * [Core Unit Tests for WordPress](http://make.wordpress.org/core/handbook/automated-testing/?rdfrom=http%3A%2F%2Fcodex.wordpress.org%2Findex.php%3Ftitle%3DAutomated_Testing%26redirect%3Dno)
 * [Smashing Magazine, Writing Unit Tests for WP Plugins](http://coding.smashingmagazine.com/2012/03/07/writing-unit-tests-for-wordpress-plugins/)
@@ -29,4 +32,4 @@ If you saw this talk, **<a href="https://joind.in/8209" target="_newtab">I'd rea
 
 **Slides** 
 
-<iframe src="http://www.slideshare.net/slideshow/embed_code/16654412" width="599" height="487" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="http://www.slideshare.net/jasonrhodes/wphackergalaxy" title="The WordPress Hacker&#39;s Guide to the \Galaxy()" target="_blank">The WordPress Hacker&#39;s Guide to the \Galaxy()</a> </strong> from <strong><a href="http://www.slideshare.net/jasonrhodes" target="_blank">Jason Rhodes</a></strong> </div>
+<iframe src="http://www.slideshare.net/slideshow/embed_code/16876126" width="599" height="487" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="http://www.slideshare.net/jasonrhodes/wphackergalaxy-midwestphp" title="The WordPress Hacker&#39;s Guide to the \Galaxy()" target="_blank">The WordPress Hacker&#39;s Guide to the \Galaxy()</a> </strong> from <strong><a href="http://www.slideshare.net/jasonrhodes" target="_blank">Jason Rhodes</a></strong> </div>
