Updated my talk notes

--- a/talks/2013-03-02-wpgalaxy.md
+++ b/talks/2013-03-02-wpgalaxy.md
@@ -6,21 +6,27 @@ description: As someone who started with PHP as a self-described "WordPress hack
 
 ## Midwest PHP Conference <small>_(3-2-2013)_</small>
 
-If you saw this talk, **<a href="https://joind.in/8209" target="_newtab">I'd really love to get your feedback on joind.in -- thanks!</a>** 
+**[Rate this talk on joind.in](https://joind.in/8209)**
 
-**Learning Resources**
+**[Example code repo](https://github.com/jasonrhodes/hikermatch.com)**
 
+**Hyperlinks**
+
+* [Zed Shaw's Command Line Crash Course](http://cli.learncodethehardway.org/book/)
 * [WP-CLI: Command line tools for WordPress](http://wp-cli.org/)
-* [Awesome He-Man costume](http://www.halloweencostumes.com/he-man-costume.html)
 * [Pro Git, by Scott Chacon (entire book online for free)](http://git-scm.com/book)
 * [Try GitHub](http://try.github.com)
+* [Awesome He-Man costume](http://www.halloweencostumes.com/he-man-costume.html)
 * [Mark Jaquith's WP Skeleton](https://github.com/markjaquith/WordPress-Skeleton)
+* [Actions vs. Filters](http://wp.smashingmagazine.com/2012/02/16/inside-wordpress-actions-filters/)
+* [WP Custom Objects, a (somewhat out of date) WordPress plugin for creating custom post types](https://github.com/jasonrhodes/WP-CustomObjects) -- built using OOP and `add_action("init", array($this, "method"))` style callbacks
 * [scribu plugin dependency plugin](https://github.com/scribu/wp-plugin-dependencies)
-
-* [WP Custom Objects, a WordPress plugin for creating custom post types](https://github.com/jasonrhodes/WP-CustomObjects) -- built using OOP and `add_action("init", array($this, "method"))` style callbacks
+* [Autoloading with WordPress](http://wordpress.stackexchange.com/questions/63668/autoloading-namespaces-in-wordpress-plugins-themes-can-it-work)
 * [Core Unit Tests for WordPress](http://make.wordpress.org/core/handbook/automated-testing/?rdfrom=http%3A%2F%2Fcodex.wordpress.org%2Findex.php%3Ftitle%3DAutomated_Testing%26redirect%3Dno)
 * [Smashing Magazine, Writing Unit Tests for WP Plugins](http://coding.smashingmagazine.com/2012/03/07/writing-unit-tests-for-wordpress-plugins/)
-* [Autoloading with WordPress](http://wordpress.stackexchange.com/questions/63668/autoloading-namespaces-in-wordpress-plugins-themes-can-it-work)
+* [WordPress APIs](http://codex.wordpress.org/WordPress_APIs)
+* [Let robots deploy your PHP projects: automated deployment tools](/2012/12/11/let-robots-deploy.html)
+
 
 **People who do amazing things with WordPress**
 
@@ -33,3 +39,5 @@ If you saw this talk, **<a href="https://joind.in/8209" target="_newtab">I'd rea
 **Slides** 
 
 <iframe src="http://www.slideshare.net/slideshow/embed_code/16876126" width="599" height="487" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="http://www.slideshare.net/jasonrhodes/wphackergalaxy-midwestphp" title="The WordPress Hacker&#39;s Guide to the \Galaxy()" target="_blank">The WordPress Hacker&#39;s Guide to the \Galaxy()</a> </strong> from <strong><a href="http://www.slideshare.net/jasonrhodes" target="_blank">Jason Rhodes</a></strong> </div>
+
+If you saw this talk, please [rate it on joind.in](https://joind.in/8209) -- thanks!
